--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     </nav>
     </header>
     <section class = "Contact">
-        <h2>Get in touch.....</h2>
+        <h2>Get in touch</h2>
         <form action="">
             <label for="">Name</label>
             <input type="text" placeholder="Enter your name">
