--- a/about.html
+++ b/about.html
@@ -16,7 +16,10 @@
     </nav>
     </header>
     <section class = "About">
+        <h2>Who am I?</h2>
+        <p>Hello! I'm Soham, a passionate web developer and tech enthusiast. I love creating beautiful and functional websites that provide great user experiences. In my free time, I enjoy exploring new technologies and improving my coding skills.</p>
 
+        
     </section>
       <footer> 
         <p>Copyright © 2025 Soham. All rights reserved.</p>
